// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="primary"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "primary",
      "children": "Push Me",
      "className": "Button-hYXUXp fzSAgN",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "primary",
        "children": "Push Me",
        "className": "Button-hYXUXp fzSAgN",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="primary"
    disabled={false}
    renderAs="button"
    size="large"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "primary",
      "children": "Push Me",
      "className": "Button-hYXUXp dWPhUy",
      "disabled": false,
      "renderAs": "button",
      "size": "large",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "primary",
        "children": "Push Me",
        "className": "Button-hYXUXp dWPhUy",
        "disabled": false,
        "renderAs": "button",
        "size": "large",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="primary"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "primary",
      "children": "Don't Push Me",
      "className": "Button-hYXUXp fzSAgN",
      "disabled": true,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "primary",
        "children": "Don't Push Me",
        "className": "Button-hYXUXp fzSAgN",
        "disabled": true,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="secondary"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "secondary",
      "children": "Push Me",
      "className": "Button-hYXUXp hgwSQR",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "secondary",
        "children": "Push Me",
        "className": "Button-hYXUXp hgwSQR",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="secondary"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "secondary",
      "children": "Don't Push Me",
      "className": "Button-hYXUXp hgwSQR",
      "disabled": true,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "secondary",
        "children": "Don't Push Me",
        "className": "Button-hYXUXp hgwSQR",
        "disabled": true,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="danger"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Dangerous action
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "danger",
      "children": "Dangerous action",
      "className": "Button-hYXUXp csvHuG",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Dangerous action",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "danger",
        "children": "Dangerous action",
        "className": "Button-hYXUXp csvHuG",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Dangerous action",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="success"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "success",
      "children": "Push Me",
      "className": "Button-hYXUXp fBofzX",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "success",
        "children": "Push Me",
        "className": "Button-hYXUXp fBofzX",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 8`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="warning"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "warning",
      "children": "Push Me",
      "className": "Button-hYXUXp MvvlT",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "warning",
        "children": "Push Me",
        "className": "Button-hYXUXp MvvlT",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 9`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="link"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "link",
      "children": "Push Me",
      "className": "Button-hYXUXp dSZpHp",
      "disabled": false,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "link",
        "children": "Push Me",
        "className": "Button-hYXUXp dSZpHp",
        "disabled": false,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 10`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="link"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "link",
      "children": "Don't Push Me",
      "className": "Button-hYXUXp dSZpHp",
      "disabled": true,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "link",
        "children": "Don't Push Me",
        "className": "Button-hYXUXp dSZpHp",
        "disabled": true,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button Component snapshots should match snapshot 11`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    appearance="primary"
    disabled={false}
    renderAs="span"
    size="normal"
  >
    I'm not a button
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "appearance": "primary",
      "children": "I'm not a button",
      "className": "Button-hYXUXp fzSAgN",
      "disabled": false,
      "renderAs": "span",
      "size": "normal",
    },
    "ref": null,
    "rendered": "I'm not a button",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "appearance": "primary",
        "children": "I'm not a button",
        "className": "Button-hYXUXp fzSAgN",
        "disabled": false,
        "renderAs": "span",
        "size": "normal",
      },
      "ref": null,
      "rendered": "I'm not a button",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
